public/stylesheets/subjects/index.css
.link-box {
    margin:10px 40px;
    width:270px;
    float:left;
    height:80px;
}
.link-heading a {
    font-weight:bold;
    color:#900;
}
.link-descr {
    margin-top:5px;
    color:#666;
    text-align:justify;
    font-size:14px;
}
#box{
    width:700px;
    margin:0px auto;
}
.box{
    width:750px;
    margin:0px auto;
}

#subjects{
    width:750px;
    margin:0px auto;
}

.submit_button {
    margin-top:15px;
    margin-left:210px;
    padding: 7px 10px;
    color: #fff;
    background: #27292B;
    -moz-border-radius:10px;
    -webkit-border-radius:10px;
    font-weight: bold;
    font-size: 14px;
    border:none;
    font-family: arial;
    cursor:pointer;
}
.submit_button:hover{
    background:  #373B3F;
}


#category-list {
    clear : both;
    padding : 10px 0 40px 0px;
    width:700px;
    margin:0px auto;
}

#category-list .listeven{
    background : #EEF2FD;
    border-bottom:1px solid #BECFFB;
    color : #444;
    height : 1.5em;
    list-style-type : none;
    padding : 0.5em 0 0 2em;
}

#category-list .listodd{
    background : #DFEAFF;
    border-bottom:1px solid #BECFFB;
    color : #444;
    height : 1.5em;
    list-style-type : none;
    padding : 0.5em 0 0 2em;
}

#category-list li.heading {
    background : none;
    font-weight : bold;
    list-style-type : none;
    color : #444;
    height : 1.5em; width : 30em;
    padding : 0.5em 0 0 5em;
}
#category-list li div {
    float : left;
}
#category-list li div.category-name {
    font-weight: bold;
    font-size:13px;
}

#category-list li div.category-code {
    width : 100px;
    font-weight: bold;
    font-size:13px;
}

#category-list li div.category-edit,
#category-list li div.category-delete {
    font-size : 0.9em;
    width : 65px;

}
#category-list li div.category-assign{
    font-size : 0.9em;
    width : 120px;
}
#category-list li div a {
    color : #000;
    font-size:14px;
    text-decoration: none;
}
#category-list li div a:hover {
    color : #d00;
    text-decoration: underline;
}

#category-list li .opt{
    float: right;
}

.add_sub a {
    color:black;
    font-weight: bold;
    font-size: 14px;
    margin-left: 20px;
}

.add_sub a:hover{
    color:#bb0000;
    text-decoration: none;
}

.add_sub{
    margin-bottom: 5px;
}

h5{
    color: #444444;
    font-weight: bold;
    font-size: 16px;
    text-align: center;
    margin-bottom: 0px;
}

#error-box {
    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
    -moz-border-radius:10px;
    -webkit-border-radius:10px;
    height : auto;
    margin : 20px auto;
    padding : 1px 0 1px 20px;
}

